Fix anchors jumping to the wrong place on the page
Closes #10

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -50,14 +50,10 @@ a {
 }
 
 section {
-  margin: 3em 0;
+  padding-top: 5em;
 
   &:first-child {
-    margin-top: 0;
-  }
-
-  &:last-child {
-    margin-bottom: 0;
+    padding-top: 0;
   }
 }
 
